# libcdc

./: CMakeLists.txt  README.md  libcdc-config.in  libcdc.pc.in
doc/: Doxyfile.in
examples/: CMakeLists.txt  find_all.c  serial_test.c  simple.c
src/: CMakeLists.txt  cdc.c  cdc.h  cdc_version_i.h.in
